# tree-scout

./: .coveragerc  .pre-commit-config.yaml  LICENSE  pyproject.toml  setup.cfg
.github/workflows/: test.yaml
scripts/: format.sh  lint.sh  test.sh
tests/: conftest.py  test_main.py  test_version.py
tests/test_dendropy/: test_calc_normed_triplet_dist_exhaustive.py
tests/test_tqdist/: test_tqdist_triplet_distance.py
tree_scout/: __init__.py
tree_scout/dendropy/: __init__.py  _calc_normed_triplet_dist_exhaustive.py  _classify_triplet_topology.py
