[build-system]
requires = [
    "setuptools>=65.0",
    "wheel>=0.36.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "tree-scout"
dynamic = ["version"]
readme = "README.md"
license = {text = 'MIT'}
description = "tree-scout enables quick analyses on big phylogenetic trees"
requires-python = ">=3.7"
dependencies = []

[[project.authors]]
name = "Matthew Andres Moreno"
email = "m.more500@gmail.com"

[project.optional-dependencies]
test = [
    "pytest>=6.2.5",
    "coverage>=6.1.1",
    "pytest-cov>=3.0.0",
    "numpy>=1.21.0",
]
dev = [
    "mypy>=0.910",
    "black>=21.10b0",
    "ruff>=0.0.98",
    "pre-commit>=2.17.0",
]

[project.urls]
Documentation = "https://github.com/mmore500/tree-scout"

[tool.setuptools.dynamic]
version = {attr = "tree_scout.__version__"}

[tool.black]
line_length = 79

[tool.isort]
force_sort_within_sections = true
line_length = 79
profile = "black"

[tool.ruff]
select = ["E", "F", "I"]
ignore = ["D10"]
line-length = 79
target-version = "py310"
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
    "D415",
]
