[bumpversion]
current_version = 0.0.0
commit = True
tag = True

[bumpversion:file:tree_scout/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
